2024-01-09_kubernetes_t_mobile/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - counter-ondrejsika.t-mobile.sikademo.com
      secretName: counter-ondrejsika.t-mobile.sikademo.com-tls
  rules:
    - host: counter-ondrejsika.t-mobile.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
